<resources>
    <string name="app_name">CustomViewProject</string>
    <string name="btn_sticker">sticker</string>
    <string name="btn_fliker">fliker_progress</string>
    <string name="btn_chart">chart</string>
    <string name="btn_launch_animation">launch animation</string>
    <string name="btn_puzzle">puzzle</string>
    <string name="btn_rule">刻度尺</string>
    <string name="btn_slide_recycler">水平滑动RecyclerView</string>
    <string name="btn_recycler_list_type">view_Type</string>
    <string name="btn_service">service</string>
    <string name="btn_intent_service">Intent_Service</string>
    <string name="btn_web_view">webView</string>
    <string name="btn_alipay">支付</string>
    <string name="btn_ok_http">OKHTTP</string>
    <string name="btn_swipe_card">swipe_card</string>
    <string name="btn_bitmap_shader">bitmap_shader</string>
    <string name="btn_retrofit">retrofit</string>
    <string name="btn_rx_java">RxJava</string>
    <string name="btn_behavior">behavior</string>
    <string name="btn_cheeses">cheese square</string>
    <string name="btn_mosaic">mosaic</string>
    <string name="btn_glide_pool">glide_pool</string>
    <string name="btn_region">region</string>
    <string name="btn_annotation">annotation</string>

    <!-- puzzle-->
    <string name="about_me">关于我</string>
    <string name="my_info">一名普通的大学生，喜欢Android，喜欢探索新鲜事物。希望以后可以找到一个好工作。恩，加油。有问题可以给我发邮件或者提issue，当然也欢迎PR，互相学习进步。\n\n wupanjie0611@gmail.com \n\n Keep Calm and Carry on!</string>
    <string name="about_project">关于本项目</string>
    <string name="project_info">这个项目是看到Layout for instagram 后，觉得这个应用很神奇，于是就很想把它实现，就算不能100%实现，也想实现它的图片效果，想了很久应该怎么实现，后来看到一篇介绍View与Matrix的文章后，有了一点点想法，当时先利用Matrix自定义View实现了Android的贴纸效果的库，写完后发现实现方式有一些相似，又反复把玩了Layout，发现里面的线很关键，后来在纸上写下了最初的model，经过几天探索实践后制作了本项目，当然没有Layout做的好，但可以给大家提供一种思路，如果不需要太强大的要求，本项目应该也可以满足。具体使用方法在这个demo的源码中都可以找到。</string>
    <string name="about_link">相关链接</string>
    <string name="link_one">此项目的地址\n https://github.com/wuapnjie/PuzzleView</string>
    <string name="link_two">实现思路比较相似的StickerView\n https://github.com/wuapnjie/StickerView</string>
    <string name="link_three">此项目依赖的图片选择库\n https://github.com/wuapnjie/PoiPhoto</string>
    <string name="link_four">我的Github主页\n https://github.com/wuapnjie</string>
    <string name="about_thank">感谢</string>
    <string name="thank_info">junyizhou的博客(从中得到了很多发散)\n http://junyizhou.github.io/</string>
    <string name="prompt.select.layout">选择布局</string>
    <string name="prompt.playground">Playground</string>
    <string name="prompt.save">保存</string>
    <string name="prompt.edit">编辑</string>
    <string name="prompt.replace">替换</string>
    <string name="prompt.rotate">旋转</string>
    <string name="prompt.flip.horizontal">镜像</string>
    <string name="prompt.flip.vertical">翻转</string>
    <string name="prompt.border">边框</string>
    <string name="prompt_share_failed">分享失败</string>
    <string name="prompt_share">分享</string>
    <string name="prompt_save_success">保存成功</string>
    <string name="prompt_save_failed">保存失败</string>
    <string name="licence">LICENCE</string>
    <string name="licence_info">Apache-2.0</string>
    <string name="title_activity_slinde">SlindeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>

    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
</resources>
